--- a/public/templates/management/configuration/agentless/agentless.html
+++ b/public/templates/management/configuration/agentless/agentless.html
@@ -22,7 +22,8 @@
             ng-if="currentConfig['agentless-agentless'] && isString(currentConfig['agentless-agentless'])">
         </wz-no-config>
         <wz-no-config flex error="'Wazuh not ready yet'"
-        ng-if="wazuhNotReadyYet && (!currentConfig || !currentConfig['agentless-agentless'])" />
+            ng-if="wazuhNotReadyYet && (!currentConfig || !currentConfig['agentless-agentless'])">
+        </wz-no-config>
         <!-- End no configuration section -->
 
         <!-- This section is the main content -->
@@ -94,7 +95,7 @@
             <!-- End main card with all the settings -->
 
             <wz-config-viewer flex getjson="getJSON()" getxml="getXML()" jsoncontent="JSONContent"
-                xmlcontent="XMLContent" />
+                xmlcontent="XMLContent"></wz-config-viewer>
 
         </div>
         <!-- End main content section -->
