--- a/public/templates/management/configuration/integrations/integrations.html
+++ b/public/templates/management/configuration/integrations/integrations.html
@@ -93,7 +93,7 @@
             </md-card>
 
             <wz-config-viewer flex getjson="getJSON()" getxml="getXML()" jsoncontent="JSONContent"
-                xmlcontent="XMLContent" />
+                xmlcontent="XMLContent"></wz-config-viewer>
 
         </div>
         <!-- End main content section -->
