--- a/public/templates/management/configuration/wazuh-commands/wazuh-commands.html
+++ b/public/templates/management/configuration/wazuh-commands/wazuh-commands.html
@@ -108,7 +108,7 @@
             <!-- End main card with all the settings -->
 
             <wz-config-viewer flex getjson="getJSON()" getxml="getXML()" jsoncontent="JSONContent"
-                xmlcontent="XMLContent" />
+                xmlcontent="XMLContent"></wz-config-viewer>
 
         </div>
         <!-- End main content section -->
