--- a/public/templates/management/configuration/amazon-s3/amazon-buckets.html
+++ b/public/templates/management/configuration/amazon-s3/amazon-buckets.html
@@ -1,8 +1,10 @@
 <!-- No configuration section -->
 <wz-no-config flex error="'not-present'"
-    ng-if="configurationSubTab === 'amazon-buckets' && currentConfig && currentConfig['aws-s3'] && !currentConfig['aws-s3'].buckets" />
+    ng-if="configurationSubTab === 'amazon-buckets' && currentConfig && currentConfig['aws-s3'] && !currentConfig['aws-s3'].buckets">
+</wz-no-config>
 <wz-no-config flex error="'Wazuh not ready yet'"
-    ng-if="wazuhNotReadyYet && (!currentConfig || !currentConfig['aws-s3']) && configurationSubTab === 'amazon-buckets'" />
+    ng-if="wazuhNotReadyYet && (!currentConfig || !currentConfig['aws-s3']) && configurationSubTab === 'amazon-buckets'">
+</wz-no-config>
 <!-- End no configuration section -->
 
 <!-- Buckets card -->
