--- a/public/templates/management/configuration/database-output/database-output.html
+++ b/public/templates/management/configuration/database-output/database-output.html
@@ -62,7 +62,7 @@
             <!-- End main card with all the settings -->
 
             <wz-config-viewer flex getjson="getJSON()" getxml="getXML()" jsoncontent="JSONContent"
-                xmlcontent="XMLContent" />
+                xmlcontent="XMLContent"></wz-config-viewer>
 
         </div>
         <!-- End main content section -->
