--- a/public/templates/management/configuration/log-collection/socket.html
+++ b/public/templates/management/configuration/log-collection/socket.html
@@ -62,7 +62,7 @@
         </md-card>
         <!-- End main card with all the settings -->
 
-        <wz-config-viewer flex getjson="getJSON()" getxml="getXML()" jsoncontent="JSONContent" xmlcontent="XMLContent" />
+        <wz-config-viewer flex getjson="getJSON()" getxml="getXML()" jsoncontent="JSONContent" xmlcontent="XMLContent"></wz-config-viewer>
 
     </div>
     <!-- End main content section -->
