review and fixed configuration/ruleset self-closing tags

--- a/public/templates/management/ruleset/decoders/decoders-detail.html
+++ b/public/templates/management/ruleset/decoders/decoders-detail.html
@@ -137,7 +137,7 @@
                         <wz-table custom-columns="true" flex path="'/decoders'"
                             implicit-filter="[{ name:'file',value: dctrl.currentDecoder.file}]"
                             keys="['name',{value:'details.program_name',size:2,nosortable:true},{value:'details.order',size:2,nosortable:true},'file']"
-                            allow-click="true" />
+                            allow-click="true"></wz-table>
                     </md-card-content>
                 </md-card>
             </div>
