--- a/public/templates/management/ruleset/rules/rules-list.html
+++ b/public/templates/management/ruleset/rules/rules-list.html
@@ -40,11 +40,13 @@
             aria-invalid="false" wz-enter="search(custom_search)" id="search-input-rules">
         <wz-add-filter-chip id-input="search-input-rules"
             options="[{label: 'File', value: 'file'}, {label: 'Path', value: 'path', hide: mctrl.showingLocalRules}, {label: 'Level', value: 'level'}, 
-        {label: 'Group', value: 'group'}, {label: 'PCI control', value: 'pci'}, {label: 'GDPR', value: 'gdpr'}, {label: 'HIPAA', value: 'hipaa'}, {label: 'NIST-800-53', value: 'nist-800-53'}]" />
+        {label: 'Group', value: 'group'}, {label: 'PCI control', value: 'pci'}, {label: 'GDPR', value: 'gdpr'}, {label: 'HIPAA', value: 'hipaa'}, {label: 'NIST-800-53', value: 'nist-800-53'}]">
+        </wz-add-filter-chip>
         <div class="euiFormControlLayoutIcons wz-margin-left-16">
             <span class="euiFormControlLayoutCustomIcon">
                 <react-component name="EuiIcon"
-                    props="{type:'search', className:'euiFormControlLayoutCustomIcon__icon'}" />
+                    props="{type:'search', className:'euiFormControlLayoutCustomIcon__icon'}">
+                </react-component>
             </span>
         </div>
         <button type="submit" aria-label="Search" class="euiButton euiButton--primary euiButton--fill wz-margin-left-8"
