--- a/public/templates/agents/agents-general.html
+++ b/public/templates/agents/agents-general.html
@@ -9,7 +9,7 @@
                 { description: 'Authentication failure', value: authFailure(), color: 'danger' }, 
                 { description: 'Authentication success', value: authSuccess(), color: 'subdued' }
             ]            
-        }" />
+        }" ></react-component>
     </div>
 
     <div class="wz-no-display">
