--- a/public/templates/agents/agents-osquery.html
+++ b/public/templates/agents/agents-osquery.html
@@ -69,7 +69,7 @@
                 </span>
             </md-card-actions>
             <md-card-content class="wazuh-column">
-                <kbn-vis vis-id="'Wazuh-App-Overview-Osquery-Alerts-summary'">
+                <kbn-vis vis-id="'Wazuh-App-Overview-Osquery-Alerts-summary'"></kbn-vis>
             </md-card-content>
         </md-card>
     </div>
