--- a/public/templates/agents/agents-sca.html
+++ b/public/templates/agents/agents-sca.html
@@ -38,7 +38,8 @@
             <canvas id="bar" class="wz-margin-top-10 chart chart-doughnut"
                 chart-data="[policy.pass, policy.fail, policy.invalid]" chart-labels="['pass','fail', 'not applicable']"
                 chart-colors="['#57C17B', '#BC52BC', '#6F86D7']"
-                chart-options="{cutoutPercentage: 75, legend: {display: true,position: 'right',},responsive: false, maintainAspectRatio: false}" />
+                chart-options="{cutoutPercentage: 75, legend: {display: true,position: 'right',},responsive: false, maintainAspectRatio: false}" >
+            </canvas>
         </div>
     </div>
 
