--- a/public/templates/agents/agents-vuls.html
+++ b/public/templates/agents/agents-vuls.html
@@ -9,7 +9,7 @@
                 { description: 'Medium severity alerts', value: vulnMedium(), color: 'secondary' },
                 { description: 'Low severity alerts', value: vulnLow(), color: 'subdued' }
             ]            
-        }" />
+        }" ></react-component>
     </div>
 
     <div class="wz-no-display">
