--- a/public/templates/agents/agents-welcome.html
+++ b/public/templates/agents/agents-welcome.html
@@ -31,7 +31,7 @@
             agentOS: agentOS || '-',
             dateAdd: agent.dateAdd ? offsetTimestamp('', agent.dateAdd) : '-',
             lastKeepAlive: agent.lastKeepAlive ? offsetTimestamp('', agent.lastKeepAlive) : '-'
-        }" />
+        }" ></react-component>
     </div>
 
     <div layout="row" layout-padding ng-if="welcomeCardsProps">
