--- a/public/templates/overview/overview-docker.html
+++ b/public/templates/overview/overview-docker.html
@@ -13,7 +13,7 @@
                 </span>
             </md-card-actions>
             <md-card-content class="wazuh-column">
-                <kbn-vis id="Wazuh-App-Overview-Docker-top-5-images" vis-id="'Wazuh-App-Overview-Docker-top-5-images'">
+                <kbn-vis id="Wazuh-App-Overview-Docker-top-5-images" vis-id="'Wazuh-App-Overview-Docker-top-5-images'"></kbn-vis>
             </md-card-content>
         </md-card>
 
@@ -28,7 +28,7 @@
             </md-card-actions>
             <md-card-content class="wazuh-column">
                 <kbn-vis id="Wazuh-App-Overview-Docker-top-5-actions"
-                    vis-id="'Wazuh-App-Overview-Docker-top-5-actions'">
+                    vis-id="'Wazuh-App-Overview-Docker-top-5-actions'"></kbn-vis>
             </md-card-content>
         </md-card>
 
@@ -43,7 +43,7 @@
             </md-card-actions>
             <md-card-content class="wazuh-column">
                 <kbn-vis id="Wazuh-App-Overview-Docker-Types-over-time"
-                    vis-id="'Wazuh-App-Overview-Docker-Types-over-time'">
+                    vis-id="'Wazuh-App-Overview-Docker-Types-over-time'"></kbn-vis>
             </md-card-content>
         </md-card>
     </div>
@@ -61,7 +61,7 @@
             </md-card-actions>
             <md-card-content class="wazuh-column">
                 <kbn-vis id="Wazuh-App-Overview-Docker-Actions-over-time"
-                    vis-id="'Wazuh-App-Overview-Docker-Actions-over-time'">
+                    vis-id="'Wazuh-App-Overview-Docker-Actions-over-time'"></kbn-vis>
             </md-card-content>
         </md-card>
 
@@ -79,7 +79,7 @@
                 </span>
             </md-card-actions>
             <md-card-content class="wazuh-column">
-                <kbn-vis vis-id="'Wazuh-App-Overview-Docker-Events-summary'">
+                <kbn-vis vis-id="'Wazuh-App-Overview-Docker-Events-summary'"></kbn-vis>
             </md-card-content>
         </md-card>
     </div>
