--- a/public/templates/overview/overview-general.html
+++ b/public/templates/overview/overview-general.html
@@ -9,7 +9,7 @@ ng-class="{'no-opacity': resultState === 'none' || !rendered}">
                 { description: 'Authentication failure', value: octrl.authFailure(), color: 'danger' }, 
                 { description: 'Authentication success', value: octrl.authSuccess(), color: 'secondary' }
             ]            
-        }" />
+        }" ></react-component>
     </div>
 
     <div class="wz-no-display">
