--- a/public/templates/overview/overview-osquery.html
+++ b/public/templates/overview/overview-osquery.html
@@ -23,7 +23,7 @@
                 </span>
             </md-card-actions>
             <md-card-content class="wazuh-column">
-                <kbn-vis id="Wazuh-App-Overview-Osquery-Top-5-added" vis-id="'Wazuh-App-Overview-Osquery-Top-5-added'">
+                <kbn-vis id="Wazuh-App-Overview-Osquery-Top-5-added" vis-id="'Wazuh-App-Overview-Osquery-Top-5-added'"></kbn-vis>
             </md-card-content>
         </md-card>
 
@@ -38,7 +38,7 @@
             </md-card-actions>
             <md-card-content class="wazuh-column">
                 <kbn-vis id="Wazuh-App-Overview-Osquery-Top-5-removed"
-                    vis-id="'Wazuh-App-Overview-Osquery-Top-5-removed'">
+                    vis-id="'Wazuh-App-Overview-Osquery-Top-5-removed'"></kbn-vis>
             </md-card-content>
         </md-card>
 
@@ -97,7 +97,7 @@
                 </span>
             </md-card-actions>
             <md-card-content class="wazuh-column">
-                <kbn-vis vis-id="'Wazuh-App-Overview-Osquery-Alerts-summary'">
+                <kbn-vis vis-id="'Wazuh-App-Overview-Osquery-Alerts-summary'"></kbn-vis>
             </md-card-content>
         </md-card>
     </div>
