--- a/public/templates/overview/overview-vuls.html
+++ b/public/templates/overview/overview-vuls.html
@@ -9,7 +9,7 @@
                 { description: 'Medium severity alerts', value: octrl.vulnMedium(), color: 'secondary' },
                 { description: 'Low severity alerts', value: octrl.vulnLow(), color: 'subdued' }
             ]            
-        }" />
+        }" ></react-component>
     </div>
 
     <div class="wz-no-display">
