Update style of agent information in wzMenu

--- a/public/components/wz-menu/wz-menu.less
+++ b/public/components/wz-menu/wz-menu.less
@@ -79,7 +79,7 @@ wz-menu {
 }
 
 .wz-menu-right-side{
-    padding: 16px;
+    padding: 0;
     max-width: 650px;
 }
 
@@ -228,6 +228,10 @@ wz-menu {
     width: 16px !important;
     height: 16px !important;
     margin-right: 6px;
+}
+
+.WzManagementSideMenu{
+    padding: 16px;
 }
 
 .WzManagementSideMenu span {
