--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1360,6 +1360,12 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom {
   overflow-y: scroll;
 }
 
+div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom.wz-menu-popover {
+  overflow-y: unset;
+  padding-right: 0;
+}
+
+
 .euiSuggestItem .euiSuggestItem__label {
   flex-basis: 25%;
   min-width: 25%;
