--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -69,9 +69,9 @@
     font-size: 16px;
 }
 
-.euiAccordion-isOpen .euiAccordion__childWrapper{
+/* .euiAccordion-isOpen .euiAccordion__childWrapper{
     height: unset!important;
-}
+} */
 
 .euiAccordion__childWrapper .flyout-row:not(.related-rules-row) .euiToolTipAnchor{
     //display: block!important;
