--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -24,9 +24,8 @@
     height: 24px;
 }
 
-.wz-module-header-nav{
-/*     min-height: 55px; */
-/*     margin: 0 16px; */
+.euiFlyoutBody .euiFlyoutBody__overflowContent{
+    padding:0!important;
 }
 
 .wz-module-header-nav > .euiFlexGroup {
