fixed some bugs in dark theme

--- a/public/less/dark_theme/wz_theme_dark.css
+++ b/public/less/dark_theme/wz_theme_dark.css
@@ -349,6 +349,7 @@ md-divider.md-default-theme, md-divider {
 
 .wz-menu-left-side {
   border-right: 1px solid #343741!important;
+  background-color: #1a1b20!important;
 }
 
 .wz-menu-sections {
@@ -403,4 +404,22 @@ md-divider.md-default-theme, md-divider {
 
 svg .legend text {
   fill: white;
+}
+
+/* welcome-agent */
+
+.wz-welcome-page-agent-tabs{
+  padding: 12px 16px 1px 10px;
+  min-height: 54px;
+  border-bottom: 1px solid #343741;
+  background-color: #1d1e24;
+}
+
+.wz-module-welcome .euiPanel--paddingSmall {
+  padding: 8px;
+  overflow: hidden;
+}
+
+.wz-agents-mitre .euiFlexGroup--directionRow {
+  overflow: hidden;
 }
