Change hover background color wzmenu

--- a/public/components/wz-menu/wz-menu.less
+++ b/public/components/wz-menu/wz-menu.less
@@ -189,7 +189,7 @@ wz-menu {
     background-color: #e7eaf1!important;
 }
 .wz-menu-button:not([disabled]):hover {
-    background-color: #e7eaf1;
+    background-color: #f5f7fa;
     text-decoration: none;
 }
 
